ncc/testsuite/negative/access1.n
namespace DerivingAccess {
  using System;
  
  class X {  }

  public class Y : X { // E: DerivingAccess.Y is more accessible than `DerivingAccess.X'
  }

  interface IFoo {  }
  public interface IBar : IFoo {  } // E: DerivingAccess.IBar is more accessible than `DerivingAccess.IFoo'
}
